# cargo-sync-readme

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/: intralinks.rs  lib.rs  main.rs
src/intralinks/: mod.rs  module_walker.rs
tests/: tests.rs
tests/intralinks_ambiguous_module/: README-expected.md
tests/intralinks_crate_name_hyphen/: README-expected.md
tests/intralinks_module_walk/: README-expected.md
tests/intralinks_simple/: README-expected.md  README-template.md
tests/intralinks_simple/src/: main.rs
tests/intralinks_stdlib_links/: README-expected.md  README-template.md
tests/intralinks_stdlib_links/src/: main.rs
