[package]
name = "cargo-sync-readme"
version = "1.0.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Generate a Markdown section in your README based on your Rust documentation"
keywords = ["cargo", "readme", "documentation"]
categories = ["development-tools::cargo-plugins"]
homepage = "https://github.com/phaazon/cargo-sync-readme"
repository = "https://github.com/phaazon/cargo-sync-readme"
documentation = "https://docs.rs/cargo-sync-readme"
readme = "README.md"
edition = "2018"

[features]
default = ["cli"]

cli = ["structopt"]

[[bin]]
name = "cargo-sync-readme"
required-features = ["cli"]

[dependencies]
regex = "1.3"
structopt = { version = "0.3", optional = true }
toml = "0.5"
syn = "1"
itertools = "0.10.0"
