[package]
name = "cargo-sync-readme"
version = "1.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Generate a Markdown section in your README based on your Rust documentation"
keywords = ["cargo", "readme", "documentation"]
categories = ["development-tools::cargo-plugins"]
homepage = "https://github.com/phaazon/cargo-sync-readme"
repository = "https://github.com/phaazon/cargo-sync-readme"
documentation = "https://docs.rs/cargo-sync-readme"
readme = "README.md"
edition = "2018"

[features]
default = ["cli"]
cli = ["structopt"]

[[bin]]
name = "cargo-sync-readme"
required-features = ["cli"]

[dependencies]
pulldown-cmark = "0.8"
regex = "1.5"
structopt = { version = "0.3", optional = true }
syn = { version = "1", features= ["extra-traits"]}
toml = "0.5"
